# RigidSim

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp
src/ext/: CMakeLists.txt
src/gui/: gl_texture.cpp  gl_texture.h  shader_toy.cpp  shader_toy.h  window.cpp  window.h
src/render/: CMakeLists.txt  camera.h  light.h  material.cpp  material.h  sample.h
src/rigid/: CMakeLists.txt  sim.cpp  sim.h
src/scene/: CMakeLists.txt  geometry.cpp  geometry.h  scene.cpp  scene.h  shape.cpp  shape.h
