function(luisa_shader_toy_add_executable name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} PRIVATE luisa::shader-toy)
    target_link_libraries(${name} PRIVATE rigid-sim-scene)
    target_link_libraries(${name} PRIVATE rigid-sim-render)
    target_link_libraries(${name} PRIVATE rigid-sim-sim)
endfunction()

luisa_shader_toy_add_executable(app)
# luisa_shader_toy_add_executable(example)
